fix overlap of item and badge for small screen

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -83,7 +83,7 @@
     height: 60px;
   }
   #timeline .timeline-movement .timeline-item {
-    padding: 20px 0;
+    padding: 100px 0;
   }
   #timeline .timeline-movement .timeline-item .timeline-panel {
     border: 1px solid #d4d4d4;
